Fix: Let user search product by their compatible vehicles. Clean up Codes